--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -24,3 +24,32 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.homepage {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  align-items: center;
+}
+
+.header {
+  width: 100%;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 12px 0px #45000033;
+  height: 130px;
+}
+
+.splash-image {
+ background: linear-gradient(102.87deg, #320002 -27.78%, #900006 2.52%);
+ width: 100vw;
+}
+
+.splash-image-overlay {
+  position: relative;
+  bottom: 150px;
+  width: 100vw;
+}
+
+.section-image {
+  width: 100vw;
+}
