--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -1,4 +1,3 @@
-
 @import "tailwindcss";
 
 :root {
@@ -42,524 +41,12 @@
 }
 
 body {
+  width: 100vw;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.homepage {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  align-items: center;
-}
-
-/* Overlay container for splash images */
-.splash-overlay-container {
-  position: relative;
-  width: 100%;
-  height: 1045px;
-}
-
-.splash-overlay-container .splash-image {
-  position: absolute;
-  top: 0;
+section {
   width: 100vw;
-}
-
-.splash-overlay-container .splash-image-overlay {
-  position: absolute;
-  top: 800px;
-  width: 100vw;
-}
-
-/* Currency Button component */
-.currency-button-container { 
-  width: 100vw;
-  position: absolute;
-  top: 900px;
-}
-
-.currency-buttons-list {
-  gap: 28px;
-}
-
-.currency-button {
-  font-family: Inter;
-  font-weight: 700;
-  font-style: Bold;
-  font-size: 14px;
-  width: 285px;
-  height: 78.22px;
-  border-radius: 40px;
-  box-shadow: 0px 4px 6px 0px #0000000F;
-  background: #FFFFFF;
-  justify-content: space-evenly;
-  color: #1F2638;
-}
-
-.currency-button-left {
-  gap: 15px;
-}
-
-.currency-button-icon {
-  width: 30px;
-  height: 30px;
-}
-
-.currency-button-trend {
-  color: #ED1D25;
-}
-
-/* Header container */
-.header {
-  width: 100%;
-  background: #FFFFFF;
-  box-shadow: 0px 1px 12px 0px #45000033;
-  height: 130px;
-}
-
-.top-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  margin: 0px 20px;
-}
-
-.title, .header-text {
-  display: flex;
-  align-items: center;
-  gap: 10px
-}
-
-.dark-text {
-  font-family: "Urbanist", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: semi-bold;
-  font-size: 14px;
-  line-height: 19.98px;
-  color: #000000;
-}
-
-.separator {
-  color: #D6D6D6;
-}
-
-.bottom-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 40px;
-  border-top: 1px solid #C9C9C9
-}
-
-.nav-bar {
-  font-family: "Urbanist", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  display: flex;
-  gap: 32px;
-  color: #010205;
-}
-
-.register-login {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-
-.register-button {
-  background: #ED1D25;
-  border-radius: 20px;
-  padding: 10px 24px;
-  width: 101px;
-  font-family: "Urbanist", sans-serif;
-  font-weight: 600;
-  font-style: semi-bold;
-  font-size: 16px;
-  line-height: 100%;
-  color: #FFFFFF;
-  border: none;
-  cursor: pointer;
-}
-
-
-/* Splash section */
-.splash-image {
- background: linear-gradient(102.87deg, #320002 -27.78%, #900006 2.52%);
- width: 100vw;
-}
-
-.splash-image-overlay {
-  position: relative;
-  bottom: 150px;
-  width: 100vw;
-}
-
-/* Second section */
-.section-image {
-  width: 100vw;
-}
-
-.info-section {
-  background: #FFFFFF;
-  width: 100vw;
-  height: 2360;
-}
-
-.empower-section {
-  background: #111111;
-  width: 100vw;
-  height: 987;
-}
-
-/* Seamless Withdrawals section */
-.seamless-withdrawals-section {
-  background: #FFFFFF;
-  width: 100vw;
-  height: 991;
-}
-
-.seamless-wthdrawals-header {
-  color: #000000;
-}
-
-.seamless-wthdrawals-header-title {
-  font-family: "Urbanist", sans-serif;
-  /* font-family: Gilroy-Bold; */
-  font-weight: 400;
-  font-style: bold;
-  font-size: 62px;
-  line-height: 68px;
-  letter-spacing: -4%;
-  text-align: center;
-}
-
-/* Daily Updates section */
-.daily-updates-section {
-  background: linear-gradient(180deg, #FFFFFF 0%, #FFF7F7 43.1%, #FFFFFF 77.95%);
-  width: 100vw;
-  height: 991;
-  gap: 36px;
-}
-
-.daily-news-updates-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 75vw;
-}
-
-.daily-updates-header-title, .seamless-wthdrawals-header-subtitle {
-  font-family: "Urbanist", sans-serif;
-  font-weight: 600;
-  font-style: semi-bold;
-  font-size: 18px;
-  line-height: 26.5px;
-  color: #FF0000;
-}
-
-.daily-updates-header-title {
-  padding-left: 10px;
-}
-
-.daily-updates-header-text {
-  font-family: "Urbanist", sans-serif;
-  /* font-family: Gilroy-Bold; */
-  font-weight: 400;
-  font-style: bold;
-  font-size: 48px;
-  line-height: 50px;
-  letter-spacing: -1%;
-  color: #000000;
-}
-
-.daily-updates-view-all {
-  color: #FF0000;
-}
-
-.daily-updates-cards-container {
-  gap: 45px;
-  margin-top: 32px;
-}
-
-.daily-updates-news {
-  width: 276px;
-  height: 455px;
-  box-shadow: 0px 2.77px 2.21px 0px #00000005;
-  box-shadow: 0px 6.65px 5.32px 0px #00000007;
-  box-shadow: 0px 12.52px 10.02px 0px #00000009;
-  box-shadow: 0px 22.34px 17.87px 0px #0000000B;
-  box-shadow: 0px 41.78px 33.42px 0px #0000000D;
-  box-shadow: 0px 100px 80px 0px #00000012;
-}
-
-.daily-updates-news-img {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-}
-
-.daily-updates-news-content {
-  display: flex;
-  flex-direction: column;
-  width: 277px;
-  height: 261px;
-  gap: 15px;
-  padding-top: 20px;
-  padding-right: 25px;
-  padding-bottom: 20px;
-  padding-left: 25px;
-  background-color: #FFFFFF;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-}
-
-.daily-updates-news-date {
-  font-family: "Urbanist", sans-serif;
-  font-weight: 600;
-  font-style: semi-bold;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.2px;
-  color: #BDBDBD;
-}
-
-.daily-updates-news-title {
-  font-family: "Urbanist", sans-serif;
-  /* font-family: Gilroy-Bold; */
-  font-weight: 400;
-  font-style: bold;
-  font-size: 16px;
-  letter-spacing: 0px;
-  line-height: 18px;
-  color: #252B42;
-}
-
-.daily-updates-news-text {
-  font-family: "Urbanist", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14px;
-  letter-spacing: 0.2px;
-  color: #737373;
-}
-
-.daily-updates-news-read-more {
-  font-family: "Urbanist", sans-serif;
-  font-weight: 600;
-  font-style: semi-bold;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.2px;
-  color: #ED1D25;
-}
-
-.daily-updates-video {
-  width: 877;
-  height: 455;
-  top: 221px;
-  left: 443px;
-  border-width: 1px;
-  border-radius: 36px;
-  box-shadow: 0px 2.77px 2.21px 0px #00000005;
-  box-shadow: 0px 6.65px 5.32px 0px #00000007;
-  box-shadow: 0px 12.52px 10.02px 0px #00000009;
-  box-shadow: 0px 22.34px 17.87px 0px #0000000B;
-  box-shadow: 0px 41.78px 33.42px 0px #0000000D;
-  box-shadow: 0px 100px 80px 0px #00000012;
-}
-
-.daily-updates-banner-container {
-  border-radius: 20px;
-  box-shadow: 0px 2.77px 2.21px 0px #00000005;
-  box-shadow: 0px 6.65px 5.32px 0px #00000007;
-  box-shadow: 0px 12.52px 10.02px 0px #00000009;
-  box-shadow: 0px 22.34px 17.87px 0px #0000000B;
-  box-shadow: 0px 41.78px 33.42px 0px #0000000D;
-  box-shadow: 0px 20px 80px 0px #00000012;
-}
-
-.daily-updates-banner-img {
-  border-radius: 20px;
-}
-
-/* Testimonials section */
-.testimonials-section {
-  background: #FFFFFF;
-  width: 100vw;
-  padding-bottom: 100px;
-}
-
-.testimonials {
-  gap: 16px;
-  margin: 40px;
-}
-
-.testimonials-header {
-  width: 500px;
-  font-family: "Urbanist", sans-serif;
-  font-weight: 600;
-  font-style: semi-bold;
-  font-size: 36px;
-  line-height: 44px;
-  text-align: center;
-  color: #000000;
-  gap: 16px;
-}
-
-.testimonials-subtext {
-  font-family: "Urbanist", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 24px;
-  color: #A8A6B1
-}
-
-.testimonials-scroll {
-  display: flex;
-  justify-content: center;
-  width: 1248.81005859375px;
-  gap: 16px;
-}
-
-.testimonials-scroll-button {
-  background: #F0F2F5;
-  width: 36px;
-  height: 36px;
-  border-radius: 100px;
-}
-
-.testimonials-card-container {
-  gap: 30px;
-}
-
-.card-container {
-  gap: 30px;
-}
-
-.card {
-  width: 394;
-  border-width: 1px;
-  gap: 16px;
-  border-radius: 16px;
-  padding: 30px;
-}
-
-.register-fund-start-trading {
-  background: linear-gradient(90deg, #BE050D 0%, #580000 100%);
-  width: 1200px;
-  height: 371px;
-  border-radius: 32px;
-  margin-top: 24px;
-  margin-bottom: 80px;
-}
-
-/* Footer component */
-.footer {
-  width: 100vw;
-  height: 891;
-  background: #000000;
-}
-
-.red-border {
-  background: #ED1D25;
-  width: 100vw;
-  height: 48px;
-}
-
-.pay-options-container {
-  width: 100vw;
-  height: 195;
-  border-bottom: 1px solid #FFFFFF;
-}
-
-.pay-options {
-  height: 38.19px;
-  gap: 50px;
-}
-
-.pay-options-img {
-  cursor: pointer;
-}
-
-.quick-info {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100vw;
-  height: 300px;
-  margin: 24px;
-}
-
-.about-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  width: 425px;
-  height: 300px;
-  gap: 20px;
-}
-
-.about-info-logo {
-  width: 160px;
-  height: 45px;
-}
-
-.about-info-socials {
-  width: 264px;
-  height: 40px;
-}
-
-.links-container {
-  display: flex;
-  width: 596px;
-  gap: 120px;
-}
-
-.links-header {
-  font-family: "Urbanist", sans-serif;
-  font-weight: 600;
-  font-style: semi-bold;
-  font-size: 18px;
-  line-height: 24px;
-  text-wrap: nowrap;
-  height: 24px;
-  margin-bottom: 20px;
-}
-
-li, .about-text {
-  opacity: 60%;
-}
-
-li {
-  cursor: pointer;
-}
-
-ul {
-  text-wrap: nowrap;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-.footer-warning {
-  line-height: 150%;
-  text-align: center;
-  color: #FFFFFF99;
-  width: 80vw;
-  gap: 24px;
-  border-top: 1px solid #FFFFFF;
-  padding: 48px;
-}
-
-.footer-copyright {
-  border-top: 1px solid #FFFFFF;
-  width: 100vw;
-  padding: 24px;
-  gap: 2px;
-  opacity: 0.7;
 }
