realigning currency buttons css

--- a/my-app/app/components/currencyButtons/currencyButtons.css
+++ b/my-app/app/components/currencyButtons/currencyButtons.css
@@ -1,8 +1,8 @@
 /* Currency Button component */
 .currency-button-container { 
-  width: 100vw;
+  width: 100%;
   position: absolute;
-  top: 900px;
+  top: -150px;
 }
 
 .currency-buttons-list {
