--- a/my-app/app/components/accessContainer/accessContainer.css
+++ b/my-app/app/components/accessContainer/accessContainer.css
@@ -36,6 +36,11 @@
   transform: translateY(-24px);
 }
 
+.access-card-container:hover .access-card-button {
+  background-color: #ED1D25;
+  opacity: 1;
+}
+
 .access-card-img {
   width: 50px;
   height: 50px;
@@ -59,11 +64,13 @@
 }
 
 .access-card-button {
-  width: 39;
-  height: 39;
-  top: 250px;
-  left: 37px;
-  angle: -180 deg;
+  display: flex;    
+  justify-content: center;
+  align-items: center;
+  width: 39px;
+  height: 39px;
   border-radius: 64.97px;
   cursor: pointer;
+  background-color: #151515;
+  opacity: 0.6;
 }
